--- a/.gitignore
+++ b/.gitignore
@@ -123,3 +123,9 @@ Desktop.ini
 # TypeScript
 *.tsbuildinfo
 
+# Environment variables
+.env
+.env.local
+.env.development
+.env.test
+.env.production
