--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 # Authentication Configuration
-AUTH_SECRET=your_nextauth_secret_here
-AUTH_MICROSOFT_ENTRA_ID_ID=your_microsoft_client_id
-AUTH_MICROSOFT_ENTRA_ID_SECRET=your_microsoft_client_secret
+AUTH_SECRET=
+AUTH_MICROSOFT_ENTRA_ID_ID=
+AUTH_MICROSOFT_ENTRA_ID_SECRET=
 
 # Domain Security - Comma-separated allowed email domains
 ALLOWED_EMAIL_DOMAINS=@sisuadigital.com,@example.com
@@ -9,10 +9,10 @@ ALLOWED_EMAIL_DOMAINS=@sisuadigital.com,@example.com
 # Role Configuration - Comma-separated emails for each role
 ADMIN_EMAILS=admin@sisuadigital.com,administrator@sisuadigital.com
 APPROVER_EMAILS=manager@sisuadigital.com,approver@sisuadigital.com
+REQUESTER_EMAILS=requester@sisuadigital.com,juanpablo.biron@sisuadigital.com
 
 # Database Configuration
-DATABASE_URL=your_database_connection_string
-
+DATABASE_URL=
 # Development Environment
 NODE_ENV=development
 NEXT_PUBLIC_APP_URL=http://localhost:3000
