--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate",
     "db:studio": "drizzle-kit studio",
-    "db:seed": "dotenv -e .env.local -- tsx src/db/seed.ts",
+    "db:seed": "tsx src/db/seed.ts",
     "db:reset": "npm run db:generate && npm run db:migrate && npm run db:seed",
     "db:push": "drizzle-kit push"
   },
@@ -25,6 +25,7 @@
     "clsx": "^2.1.1",
     "dotenv": "^17.2.1",
     "drizzle-orm": "^0.44.4",
+    "exceljs": "^4.4.0",
     "lucide-react": "^0.539.0",
     "next": "15.4.6",
     "next-auth": "^5.0.0-beta.29",
@@ -32,6 +33,7 @@
     "react-dom": "19.1.0",
     "tailwind-merge": "^3.3.1",
     "uuid": "^11.1.0",
+    "ws": "^8.18.3",
     "zod": "^4.0.15"
   },
   "devDependencies": {
@@ -43,7 +45,8 @@
     "@types/pg": "^8.15.5",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "drizzle-kit": "^0.31.4",
+    "@types/ws": "^8.18.1",
+    "drizzle-kit": "^0.18.1",
     "eslint": "^9",
     "eslint-config-next": "15.4.6",
     "tailwindcss": "^4",
