implementing blob pdf upload

--- a/.env.example
+++ b/.env.example
@@ -16,3 +16,8 @@ DATABASE_URL=
 # Development Environment
 NODE_ENV=development
 NEXT_PUBLIC_APP_URL=http://localhost:3000
+
+# Azure storage
+AZURE_STORAGE_ACCOUNT_NAME=your-storage-account
+AZURE_STORAGE_ACCOUNT_KEY=your-key
+AZURE_STORAGE_CONTAINER_NAME=invoices-pdf
