--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build", 
     "start": "next start",
     "lint": "next lint",
     "db:generate": "drizzle-kit generate",
@@ -12,7 +12,9 @@
     "db:studio": "drizzle-kit studio",
     "db:seed": "tsx src/db/seed.ts",
     "db:reset": "npm run db:generate && npm run db:migrate && npm run db:seed",
-    "db:push": "drizzle-kit push"
+    "db:push": "drizzle-kit push",
+    "db:clear": "tsx src/db/seed.ts reset",
+    "db:reset-complete": "npm run db:generate && npm run db:migrate && npm run db:clear"
   },
   "dependencies": {
     "@auth/drizzle-adapter": "^1.10.0",
